<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/access_bg"
    android:padding="@dimen/page_padding"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">



    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/elogo"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:orientation="horizontal">

          <TextView
             style="@style/testHintStyle"
              android:text="@string/username"/>

          <EditText
             style="@style/editTextStyle"
              android:hint="@string/username"
              android:id="@+id/ed_username"/>
      </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/testHintStyle"
            android:text="@string/password"/>

        <EditText
            style="@style/editTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/ed_password"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="match_parent"
        android:gravity="right"
        style="@style/testHintStyle"
        android:layout_marginTop="10dp"

        android:text="@string/forgot_password"
        />

   <Button
       android:id="@+id/btn_login"
       style="@style/buttonStyle"
       android:layout_marginTop="10dp"
       android:text="@string/login"/>


    <TextView
        style="@style/testHintStyle"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/or"
         />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/buttonStyle"
            android:text="@string/create_account"/>


</LinearLayout>