<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/access_bg"
    android:orientation="vertical"
    android:padding="@dimen/page_padding"
    tools:context=".fragment.NewsFragment">


    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/elogo" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/contacting_server"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/tv_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/server_contact_msg" />

    <Button
        android:id="@+id/btn_done"
        style="@style/buttonStyle"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:text="@string/done"/>
</LinearLayout>